force-app/main/default/objects/CLQ_StandardFindingsSetting__c/CLQ_StandardFindingsSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Standard Findings</label>
</CustomObject>