force-app/main/default/objects/CLQ_StandardFindingsSetting__c/fields/ProgramType__c.field-meta.xml
<CustomField>
    <fullName>ProgramType__c</fullName>
    <label>ProgramType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>