force-app/main/default/objects/CLQ_StandardFindingsSetting__c/fields/StandardFindingsName__c.field-meta.xml
<CustomField>
    <fullName>StandardFindingsName__c</fullName>
    <label>StandardFindingsName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>