force-app/main/default/objects/CLQ_StandardFindingsSetting__c/fields/Type_of_StandradFinding__c.field-meta.xml
<CustomField>
    <fullName>Type_of_StandradFinding__c</fullName>
    <label>Type of StandradFinding</label>
    <length>30</length>
    <type>Text</type>
</CustomField>